--- a/myResume/Info.plist
+++ b/myResume/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>FIRESTORE_API_KEY</key>
 	<string>$(FIRESTORE_API_KEY)</string>
+	<key>FIRESTORE_PROJECT_NAME</key>
+	<string>$(FIRESTORE_PROJECT_NAME)</string>
 </dict>
 </plist>
