--- a/myResume/Info.plist
+++ b/myResume/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>FIRESTORE_API_KEY</key>
 	<string>$(FIRESTORE_API_KEY)</string>
 	<key>FIRESTORE_PROJECT_NAME</key>
